deploy/envoy/envoy.yaml
admin:
      access_log_path: /dev/null
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8080

static_resources:
      listeners:
      - name: grpc_listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 5050
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: http_5050
              access_log:
                - name: envoy.access_loggers.file
                  typed_config:
                    path: /dev/stdout
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                          grpc: { }
                        route:
                          cluster: service
              http_filters:
#                - name: envoy.filters.http.local_ratelimit
#                  typed_config:
#                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
#                    stat_prefix: http_local_rate_limiter
#                    token_bucket:
#                      max_tokens: 1000
#                      tokens_per_fill: 1000
#                      fill_interval: 1s
#                    filter_enabled:
#                      runtime_key: local_rate_limit_enabled
#                      default_value:
#                        numerator: 100
#                        denominator: HUNDRED
#                    filter_enforced:
#                      runtime_key: local_rate_limit_enforced
#                      default_value:
#                        numerator: 100
#                        denominator: HUNDRED
#                    response_headers_to_add:
#                      - append: false
#                        header:
#                          key: x-local-rate-limit
#                          value: 'true'
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: envoy-admin
          connect_timeout: 0.25s
          type: STATIC
          load_assignment:
            cluster_name: envoy-admin
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 10000

        - name: service
          type: STRICT_DNS
          connect_timeout: 25s
          lb_policy: round_robin
          load_assignment:
            cluster_name: service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: broker-service
                          port_value: 8081
          max_requests_per_connection: 10000000
          per_connection_buffer_limit_bytes: 100000000
          http2_protocol_options: {
            "hpack_table_size": 4294967295,
            "max_concurrent_streams": 2147483647,
            "initial_stream_window_size": 2147483647,
            "max_outbound_frames": 100000,
            "max_outbound_control_frames": 100000,
            "max_consecutive_inbound_frames_with_empty_payload": 10,
          }
