deploy/envoy/envoyDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: envoy
          imagePullPolicy: Never
          ports:
            - name: https
              containerPort: 8080
          resources:
            requests:
              memory: "2Gi"
              cpu: "2"
            limits:
              memory: "3Gi"
              cpu: "3"

---

apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  type: NodePort
  selector:
    app: envoy
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
